add application file.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 spring:
   datasource:
-    url: jdbc:oracle:thin:@localhost:1521:orcl11
+    url: jdbc:oracle:thin:@host.docker.internal:1521:orcl11
+    #url: jdbc:oracle:thin:@mysql-docker:1521:orcl11
     password: pinku
     username: system
     driver-class-name: "oracle.jdbc.OracleDriver"
@@ -17,10 +18,5 @@ spring:
   security:
     user:
       name: user
-      password: user
-
-server:
-  port: 9099
-
-  
-      
+      password: user1
+ 
